# python-todo

./: .editorconfig  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  python-todo.code-workspace  shell.nix  todo.md
.github/workflows/: deploy.yaml
client/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
client/src/: Home.page.tsx  client.ts  index.css  index.main.ts
client/src/types/: api.ts
server/: config.py  health.py  main.py  models.py  pyproject.toml  test_main.py  todo.py
server/features/health/: health_router.py  test_health.py
server/features/todo/: test_todo.py  todo_router.py
server/migrations/models/: 2_20250611090000_None.py
server/modules/: __init__.py
server/modules/health/: health.py  test_health.py
server/modules/todo/: __init__.py  schemas.py  test_todo.py  todo.py
