[project]
name = "python-todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "polyfactory>=2.21.0",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
    "supabase>=2.15.2",
    "tortoise-orm>=0.25.1",
    "uvicorn>=0.34.3",
]

[tool.pylint.format]
indent-after-paren = 2
indent-string = "  "
